--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <head>
-
+html lang="pt-BR">
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <title>Aluraflix</title>
+</head>
 
 
 <body>
@@ -11,3 +15,9 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/t8a5XUe4qyU?si=Mu3ntQjy52l-aviw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 </body>
+</div>
+    </section>
+
+</body>
+
+</html>
