--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@ html lang="pt-BR">
 </body>
 </div>
     </section>
-
+    
+<h2>Filmes e seies</h2>
+<div>
+    <img src=https://img.youtube.com/vi/t8a5XUe4qyU/maxresdefault.jpg
+    ipg" />
+</div>
+</section>   
 </body>
+
 
 </html>
